--- a/rt-live.org
+++ b/rt-live.org
@@ -35,6 +35,12 @@
 
 
 Source: https://rt.live/
+Original author: Kevin Systrom - April 17.
+
+Source: 
+1. https://rt.live/
+2. https://github.com/k-sys/covid-19
+   
 
 * Estimating COVID-19's $R_t$ in Real-Time
 Author: Kevin Systrom - April 17
