--- a/rt-live.org
+++ b/rt-live.org
@@ -34,16 +34,20 @@
 #+end_export
 
 
-Source: https://rt.live/
 Original author: Kevin Systrom - April 17.
 
 Source: 
 1. https://rt.live/
 2. https://github.com/k-sys/covid-19
    
+#+begin_src python :session *Python-3.x* :exports none :results silent
+# notebook-specific functions
+%run rt_live_functions.py
+from IPython.display import clear_output
 
-* Estimating COVID-19's $R_t$ in Real-Time
-Author: Kevin Systrom - April 17
+get_ipython().run_line_magic('config', "InlineBackend.figure_format = 'retina'")
+#+end_src
+
 
 Temporary reference to avoid issues with BibTeX:
 \cite[Online peer-reviewed journal]{Bettencourt:08}
