--- a/rt-live.org
+++ b/rt-live.org
@@ -263,6 +263,57 @@ $R_t$.
         &= \frac{\lambda^k e^{-\lambda}}{k!}
 \end{align*}
 
+* Evaluating the Likelihood Function
+To continue our example, let's imagine a sample of new case counts $k$. What
+is the likelihood of different values of $R_t$ on each of those days?
+#+BEGIN_SRC python :session *Python-3.x* :exports both :results file
+k = np.array([20, 40, 55, 90])
+
+# We create an array for every possible value of Rt
+R_T_MAX = 12
+r_t_range = np.linspace(0, R_T_MAX, R_T_MAX*100+1)
+
+# Gamma is 1/serial interval
+# https://wwwnc.cdc.gov/eid/article/26/7/20-0282_article
+# https://www.nejm.org/doi/full/10.1056/NEJMoa2001316
+GAMMA = 1/7
+
+# Map Rt into lambda so we can substitute it into the equation below
+# Note that we have N-1 lambdas because on the first day of an outbreak
+# you do not know what to expect.
+lam = k[:-1] * np.exp(GAMMA * (r_t_range[:, None] - 1))
+
+# Evaluate the likelihood on each day and normalize sum of each day to 1.0
+likelihood_r_t = sps.poisson.pmf(k[1:], lam)
+likelihood_r_t /= np.sum(likelihood_r_t, axis=0)
+
+def plot_it(filename):
+    # Plot it
+    ax = pd.DataFrame(
+        data = likelihood_r_t,
+        index = r_t_range
+    ).plot(
+        title='Likelihood of $R_t$ given $k$',
+        xlim=(0,10),
+        figsize=(8,6.5)
+    )
+    ax.legend(labels=k[1:], title='New Cases')
+    ax.set_xlabel('$R_t$');
+    plt.savefig(filename)
+    return filename
+    
+plot_it(filename='./img/systrom-3.png')
+#+end_src
+
+#+attr_latex: :width 0.6\linewidth
+#+RESULTS:
+[[file:./img/systrom-3.png]]
+
+
+You can see that each day we have a independent guesses for $R_t$. The goal
+is to combine the information we have about previous days with the current
+day. To do this, we use Bayes' theorem.
+
 
 \newpage
 * Reference Section [REMOVE]
