--- a/rt-live.org
+++ b/rt-live.org
@@ -479,7 +479,8 @@ def prepare_cases(cases, cutoff=25):
         center=True
     ).mean(std=2).round()
     idx_start = np.searchsorted(smoothed, cutoff)
-    smoothed = smoothed.iloc[idx_start:]
+    # smoothed = smoothed.iloc[idx_start:]
+    # BUGFIX:
     smoothed = smoothed.iloc[idx_start[0]:]
     original = new_cases.loc[smoothed.index]
     return original, smoothed
