--- a/rt-live.org
+++ b/rt-live.org
@@ -512,15 +512,73 @@ plot_it(filename='./img/systrom-6-a.png')
 #+RESULTS:
 [[file:./img/systrom-6-a.png]]
 
-#+BEGIN_SRC python :session *Python-3.x* :exports both :results file :eval no
-def plot_it(filename):
-    ax = smoothed.plot(label='Smoothed', legend=True)
-    ax.get_figure().set_facecolor('w')
-    plt.savefig(filename)
-    return filename
-    
-plot_it(filename='./img/systrom-6-b.png')
-#+end_src
+** Running the Algorithm
+*** Choosing the Gaussian $\sigma$ for $P(R_t|R_{t-1})$
+Note: you can safely skip this section if you trust that we chose the right
+value of $\sigma$ for the process below. Otherwise, read on.  
+
+The original approach simply selects yesterday's posterior as today's
+prior. While intuitive, doing so doesn't allow for our belief that the value
+of $R_t$ has likely changed from yesterday. To allow for that change, we
+apply Gaussian noise to the prior distribution with some standard deviation
+$\sigma$. The higher $\sigma$ the more noise and the more we will expect
+the value of $R_t$ to drift each day. Interestingly, applying noise on
+noise iteratively means that there will be a natural decay of distant
+posteriors. This approach has a similar effect of windowing, but is more
+robust and doesn't arbitrarily forget posteriors after a certain time like
+my previous approach. Specifically, windowing computed a fixed $R_t$ at
+each time $t$ that explained the surrounding $w$ days of cases, while the
+new approach computes a series of $R_t$ values that explains all the cases,
+assuming that $R_t$ fluctuates by about $\sigma$ each day.
+
+However, there's still an arbitrary choice: what should $\sigma$ be? Adam
+Lerer pointed out that we can use the process of maximum likelihood to inform
+our choice. Here's how it works:
+
+Maximum likelihood says that we'd like to choose a $\sigma$ that maximizes
+the likelihood of seeing our data $k$: $P(k|\sigma)$. Since $\sigma$ is a
+fixed value, let's leave it out of the notation, so we're trying to maximize
+$P(k)$ over all choices of $\sigma$.
+ 
+Since $P(k)=P(k_0,k_1,\ldots,k_t)=P(k_0)P(k_1)\ldots P(k_t)$ we need to
+define $P(k_t)$. It turns out this is the denominator of Bayes rule:
+
+\begin{equation}
+    P(R_t|k_t) = \frac{P(k_t|R_t)P(R_t)}{P(k_t)}
+\end{equation}
+
+To calculate it, we notice that the numerator is actually just the joint
+distribution of $k$ and $R$:
+\begin{equation}
+    P(k_t,R_t) =  P(k_t|R_t)P(R_t) 
+\end{equation}
+
+We can marginalize the distribution over $R_t$ to get $P(k_t)$:
+\begin{equation}
+P(k_t) = \sum_{R_{t}}{P(k_t|R_t)P(R_t)} 
+\end{equation}
+
+
+So, if we sum the distribution of the numerator over all values of $R_t$,
+we get $P(k_t)$. And since we're calculating that anyway as we're calculating
+the posterior, we'll just keep track of it separately.
+
+Since we're looking for the value of $\sigma$ that maximizes $P(k)$ overall,
+we actually want to maximize:
+
+\begin{equation}
+    \prod_{t,i}{p(k_{ti})}
+\end{equation}
+
+where $t$ are all times and $i$ is each state.
+
+Since we're multiplying lots of tiny probabilities together, it can be
+easier (and less error-prone) to take the $\log$ of the values and add them
+together. Remember that $\log{ab}=\log{a}+\log{b}$. And since logarithms
+are monotonically increasing, maximizing the sum of the $\log$ of the
+probabilities is the same as maximizing the product of the non-logarithmic
+probabilities for any choice of $\sigma$.
+
 
 \newpage
 * Reference Section [REMOVE]
