--- a/rt-live.org
+++ b/rt-live.org
@@ -56,7 +56,6 @@ import matplotlib
 matplotlib.use('Agg')  # Agg backend for non-interactive use with Org
 #+end_src
 
-
 * Introduction
 In any epidemic, $R_t$ is the measure known as the 
 /effective reproduction number/. 
@@ -586,3 +585,63 @@ probabilities for any choice of $\sigma$.
 
 \appendix 
 \newpage
+
+* Build: Python packages
+#+begin_src python :session *Python-3.x* :exports both :results output
+pd.show_versions()
+#+end_src
+
+#+RESULTS:
+#+begin_example
+INSTALLED VERSIONS
+------------------
+commit: None
+python: 3.7.1.final.0
+python-bits: 64
+OS: Linux
+OS-release: 5.3.0-46-generic
+machine: x86_64
+processor: x86_64
+byteorder: little
+LC_ALL: None
+LANG: en_US.UTF-8
+LOCALE: en_US.UTF-8
+
+pandas: 0.23.4
+pytest: 4.0.2
+pip: 18.1
+setuptools: 40.6.3
+Cython: 0.29.2
+numpy: 1.15.4
+scipy: 1.1.0
+pyarrow: None
+xarray: None
+IPython: 7.2.0
+sphinx: 1.8.2
+patsy: 0.5.1
+dateutil: 2.7.5
+pytz: 2018.7
+blosc: None
+bottleneck: 1.2.1
+tables: 3.4.4
+numexpr: 2.6.8
+feather: None
+matplotlib: 3.0.2
+openpyxl: 2.5.12
+xlrd: 1.2.0
+xlwt: 1.3.0
+xlsxwriter: 1.1.2
+lxml: 4.2.5
+bs4: 4.6.3
+html5lib: 1.0.1
+sqlalchemy: 1.2.15
+pymysql: None
+psycopg2: None
+jinja2: 2.10
+s3fs: None
+fastparquet: None
+pandas_gbq: None
+pandas_datareader: None
+
+
+#+end_example
