--- a/rt-live.org
+++ b/rt-live.org
@@ -575,6 +575,72 @@ probabilities is the same as maximizing the product of the non-logarithmic
 probabilities for any choice of $\sigma$.
 #+end_quote
 
+** Function for Calculating the Posteriors
+To calculate the posteriors we follow these steps:
+
+1. Calculate $\lambda$, the expected arrival rate for every day's poisson
+   process;
+2. Calculate each day's likelihood distribution over all possible values
+   of $R_t$;
+3. Calculate the process matrix based on the value of $\sigma$ we discussed
+   above;
+4. Calculate our initial prior because our first day does not have a previous
+   day from which to take the posterior
+    - Based on [[https://wwwnc.cdc.gov/eid/article/26/7/20-0282_article][info from the cdc]]
+      we will choose a Gamma with mean 7.
+5. Loop from day 1 to the end, doing the following:
+    - Calculate the prior by applying the Gaussian to yesterday's prior.
+    - Apply Bayes' rule by multiplying this prior and the likelihood we calculated in step 2.
+    - Divide by the probability of the data (also Bayes' rule)
+
+#+BEGIN_SRC python :session *Python-3.x* :exports both :results output
+def get_posteriors(sr, sigma=0.15):
+    # (1) Calculate Lambda
+    lam = sr[:-1].values * np.exp(GAMMA * (r_t_range[:, None] - 1))
+    # (2) Calculate each day's likelihood
+    likelihoods = pd.DataFrame(
+        data = sps.poisson.pmf(sr[1:].values, lam),
+        index = r_t_range,
+        columns = sr.index[1:]
+    )
+    # (3) Create the Gaussian Matrix
+    process_matrix = sps.norm(
+        loc=r_t_range,
+        scale=sigma
+   ).pdf(r_t_range[:, None]) 
+    # (3a) Normalize all rows to sum to 1
+    process_matrix /= process_matrix.sum(axis=0)
+    # (4) Calculate the initial prior
+    #prior0 = sps.gamma(a=4).pdf(r_t_range)
+    prior0 = np.ones_like(r_t_range)/len(r_t_range)
+    prior0 /= prior0.sum()
+    # Create a DataFrame that will hold our posteriors for each day
+    # Insert our prior as the first posterior.
+    posteriors = pd.DataFrame(
+        index=r_t_range,
+        columns=sr.index,
+        data={sr.index[0]: prior0}
+    )
+    # We said we'd keep track of the sum of the log of the probability
+    # of the data for maximum likelihood calculation.
+    log_likelihood = 0.0
+    # (5) Iteratively apply Bayes' rule
+    for previous_day, current_day in zip(sr.index[:-1], sr.index[1:]):
+        #(5a) Calculate the new prior
+        current_prior = process_matrix @ posteriors[previous_day]
+        #(5b) Calculate the numerator of Bayes' Rule: P(k|R_t)P(R_t)
+        numerator = likelihoods[current_day] * current_prior
+        #(5c) Calcluate the denominator of Bayes' Rule P(k)
+        denominator = np.sum(numerator)
+        # Execute full Bayes' Rule
+        posteriors[current_day] = numerator/denominator
+        # Add to the running sum of log likelihoods
+        log_likelihood += np.log(denominator)
+    return posteriors, log_likelihood
+
+# Note that we're fixing sigma to a value just for the example
+posteriors, log_likelihood = get_posteriors(smoothed, sigma=.25)
+#+end_src
 
 \newpage
 #+BIBLIOGRAPHY: refs cell limit:t
